--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "sharp-signal-dashboard",
   "version": "1.0.0",
@@ -13,6 +12,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2",
-    "recharts": "2.7.2"
+    "typescript": "^5.0.0",
+    "recharts": "^2.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21"
   }
 }
