--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.0",
     "recharts": "^2.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "typescript": "^5.0.0",
+    "@types/react": "^18.0.28",
+    "@types/node": "^18.15.11"
   }
 }
